demo.css
/* Prettyfy Theme */
.prettyprint {
  background-color: #F7F7F9;
  font-family: Menlo, 'Bitstream Vera Sans Mono', 'DejaVu Sans Mono', Monaco, Consolas, monospace;
  border: 2px solid #E1E1E8;
  padding: 15px 21px;
}
.pln {
  color: #333333;
}
@media screen {
  .str {
    color: #dd1144;
  }
  .kwd {
    color: #333333;
  }
  .com {
    color: #999988;
  }
  .typ {
    color: #445588;
  }
  .lit {
    color: #445588;
  }
  .pun {
    color: #333333;
  }
  .opn {
    color: #333333;
  }
  .clo {
    color: #333333;
  }
  .tag {
    color: navy;
  }
  .atn {
    color: teal;
  }
  .atv {
    color: #dd1144;
  }
  .dec {
    color: #333333;
  }
  .var {
    color: teal;
  }
  .fun {
    color: #990000;
  }
}
@media print, projection {
  .str {
    color: #006600;
  }
  .kwd {
    color: #006;
    font-weight: bold;
  }
  .com {
    color: #600;
    font-style: italic;
  }
  .typ {
    color: #404;
    font-weight: bold;
  }
  .lit {
    color: #004444;
  }
  .pun,
  .opn,
  .clo {
    color: #444400;
  }
  .tag {
    color: #006;
    font-weight: bold;
  }
  .atn {
    color: #440044;
  }
  .atv {
    color: #006600;
  }
}
/* Specify class=linenums on a pre to get line numbering */
ol.linenums {
  margin-top: 0;
  margin-bottom: 0;
}
.container {
  width: 970px !important;
}
.demo-headline {
  padding: 43px 0 110px;
  text-align: center;
}
.demo-logo {
  font: "Helvetica Neue", Helvetica, Arial, sans-serif;
  letter-spacing: -2px;
  margin: 10px 0;
}
.demo-logo .logo {
  background-size: 236px 181px;
  height: 81px;
  margin: 0 auto 26px;
  overflow: hidden;
  text-indent: -9999em;
  width: 236px;
}
.demo-logo small {
  color: rgba(52, 73, 94, 0.3);
  display: block;
  font-size: 22px;
  font-weight: 700;
  letter-spacing: 0;
  padding-top: 5px;
}
.demo-row {
  margin-bottom: 20px;
}
.demo-row .demo-heading-note,
.demo-row .demo-text-note {
  display: block;
  width: 260px;
  position: absolute;
  bottom: 10px;
  left: 0;
  font-size: 13px;
  line-height: 13px;
  color: #c0c1c2;
  font-weight: 400;
}
.demo-row .demo-text-note {
  bottom: auto;
  top: 10px;
}
.demo-row.typography-row .demo-content {
  float: none;
  width: auto;
  clear: both;
}
.demo-row.typography-row .demo-type-example {
  padding-left: 25%;
  margin-bottom: 40px;
  position: relative;
}
.demo-section-title {
  font: 900 32px/40px "Helvetica Neue", Helvetica, Arial, sans-serif;
  margin: 10px 0;
}
.demo-panel-title {
  padding-top: 20px;
  margin: 2px 0 20px;
  font: bold 23px/40px "Helvetica Neue", Helvetica, Arial, sans-serif;
}
.demo-panel-title small {
  color: #798795;
  font-size: inherit;
  font-weight: 400;
}
.demo-navigation {
  margin-bottom: -4px;
  margin-top: -10px;
}
.demo-pager {
  margin-top: -20px;
}
.demo-tooltips {
  height: 126px;
}
.demo-tooltips .tooltip {
  left: -8px !important;
  position: relative !important;
  top: -8px !important;
}
.demo-headings {
  margin-bottom: 12px;
}
.demo-tiles {
  margin-bottom: 46px;
}
.demo-icons {
  font-size: 32px;
  margin-left: -20px;
  padding-left: 20px;
}
.demo-icons .demo-content {
  margin: 0 0 0 -35px;
}
.demo-icons .demo-content > span {
  display: inline-block;
  margin: 0 0 32px 35px;
  width: 24px;
  font-size: 24px;
}
.demo-icons-tooltip {
  bottom: 0;
  color: #c2c8cf;
  font-size: 12px;
  left: 100%;
  margin-left: 0 !important;
  position: absolute;
  width: 80px;
}
.demo-illustrations .demo-content {
  margin: 0 0 0 -40px;
  padding-top: 20px;
}
.demo-illustrations .demo-content:before,
.demo-illustrations .demo-content:after {
  content: " ";
  display: table;
}
.demo-illustrations .demo-content:after {
  clear: both;
}
.demo-illustrations .demo-content > div {
  float: left;
  width: 100px;
  height: 100px;
  line-height: 100px;
  margin: 0 0 40px 40px;
  text-align: center;
}
.demo-illustrations img {
  display: inline-block;
  max-height: 100px;
  max-width: 100px;
  vertical-align: middle;
}
.demo-samples {
  margin-bottom: 46px;
}
.demo-download-section {
  float: none;
  margin: 0 auto;
  padding: 60px 0 90px 20px;
  text-align: center;
}
.demo-download-section [class*='fui-'] {
  margin: 3px 0 -3px;
}
.demo-download {
  background-color: #ebedef;
  height: 190px;
  margin: 0 auto 32px;
  padding: 40px 28px 30px 32px;
  text-align: center;
  width: 190px;
  border-radius: 50%;
}
.demo-download img {
  height: 104px;
  width: 82px;
}
.demo-download-text {
  font-size: 15px;
  padding: 20px 0;
  text-align: center;
}
.demo-text-box a:hover {
  color: #1abc9c;
}
.demo-browser {
  background: #2c3e50 url(../images/demo/browser.png) 0 0 no-repeat;
  background-size: 659px 42px;
  color: #ffffff;
  margin: 0 41px 140px 0;
  padding-top: 42px;
  border-radius: 0 0 6px 6px;
}
.demo-browser-side {
  float: left;
  padding: 22px 20px;
  width: 151px;
}
.demo-browser-side > h5 {
  font-size: 16px;
  margin-top: 4px;
  margin-bottom: 3px;
  text-transform: none;
  font-weight: 400;
}
.demo-browser-side > h6 {
  font-size: 11px;
  font-weight: 300;
  line-height: 18px;
  margin-top: 3px;
  text-transform: none;
  -webkit-font-smoothing: subpixel-antialiased;
}
.demo-browser-author {
  background: url(../images/demo/browser-author.jpg) center no-repeat;
  border: 3px solid #ffffff;
  display: block;
  height: 84px;
  margin: 0 auto;
  width: 84px;
  border-radius: 50%;
}
.demo-browser-action {
  padding: 30px 0 12px;
}
.demo-browser-action > .btn {
  padding: 7px 0 8px 11px !important;
  text-align: left;
  border-radius: 3px;
}
.demo-browser-action > .btn > [class^="fui-"] {
  margin-right: 12px;
  position: relative;
  top: 1px;
}
.demo-browser-content {
  background-color: #34495e;
  overflow: hidden;
  padding: 21px 0 0 20px;
  border-radius: 0 0 6px;
}
.demo-browser-content > img {
  border: 6px solid #ffffff;
  float: left;
  margin: 0 15px 20px 0;
  width: 146px;
}
.demo-swatches-row [class*="col"] {
  float: left;
  min-height: 1px;
}
.demo-swatches-row .swatches-col {
  width: 800px;
  margin-left: -5px;
}
.demo-swatches-row .swatches-desc-col {
  width: 140px;
  margin-left: 20px;
}

